--- a/back-app/package.json
+++ b/back-app/package.json
@@ -40,6 +40,7 @@
   },
   "devDependencies": {
     "@types/node": "^18.16.3",
+    "nodemon": "^2.0.22",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.0.4",
