--- a/my-app/package.json
+++ b/my-app/package.json
@@ -13,12 +13,14 @@
     "@types/react": "18.2.0",
     "@types/react-dom": "18.2.1",
     "autoprefixer": "10.4.14",
+    "axios": "^1.4.0",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.1",
     "framer-motion": "^10.12.4",
     "next": "13.3.1",
     "postcss": "8.4.23",
     "react": "18.2.0",
+    "react-debounce-input": "^3.3.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
     "react-loader-spinner": "^5.3.4",
