--- a/back-app/package.json
+++ b/back-app/package.json
@@ -27,6 +27,7 @@
     "@types/jsonwebtoken": "^9.0.2",
     "@types/multer": "^1.4.7",
     "bcrypt": "^5.1.0",
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "dotenv-cli": "^7.2.1",
