--- a/my-app/package.json
+++ b/my-app/package.json
@@ -20,10 +20,12 @@
     "next": "13.3.1",
     "postcss": "8.4.23",
     "react": "18.2.0",
+    "react-currency-input-field": "^3.6.10",
     "react-debounce-input": "^3.3.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
     "react-loader-spinner": "^5.3.4",
+    "react-toastify": "^9.1.2",
     "tailwindcss": "^3.3.2",
     "typescript": "5.0.4"
   }
