--- a/my-app/package.json
+++ b/my-app/package.json
@@ -12,6 +12,7 @@
     "@types/node": "18.16.1",
     "@types/react": "18.2.0",
     "@types/react-dom": "18.2.1",
+    "@types/react-text-mask": "^5.4.11",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
     "dayjs": "^1.11.7",
@@ -26,6 +27,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
     "react-loader-spinner": "^5.3.4",
+    "react-text-mask": "^5.5.0",
     "react-toastify": "^9.1.2",
     "tailwindcss": "^3.3.2",
     "typescript": "5.0.4"
