--- a/my-app/tsconfig.json
+++ b/my-app/tsconfig.json
@@ -14,6 +14,7 @@
     "isolatedModules": true,
     "jsx": "preserve",
     "incremental": true,
+    "moduleDetection": "force",
     "paths": {
       "@/*": ["./src/*"]
     }
