--- a/back-app/package.json
+++ b/back-app/package.json
@@ -12,7 +12,7 @@
     "dev:load-envs": "dotenv -e .env.development",
     "dev:migration:run": "npm run dev:load-envs prisma migrate deploy",
     "dev:migration:generate": "npm run dev:load-envs prisma migrate dev",
-    "prisma:migrate:deploy": "prisma migrate deploy",
+    "prisma:migrate:deploy": "prisma migrate deploy && prisma db seed",
     "dev:seed": "npm run dev:load-envs prisma db seed"
   },
   "author": "",
