--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,12 +24,10 @@ services:
       - back-volume:/src/usr/mc-caminhoes
 
   web:
-    container_name: my-app
+    container_name: next
     build: ./my-app
     ports: 
       - 3000:3000
-    env_file:
-      - my-app/.env.production
     depends_on:
       - node
     volumes:
