--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Create front-end env file
         uses: SpicyPizza/create-envfile@v1.3.1
         with:
-          envkey_REACT_BACK: ${{secrets.REACT_BACK}}
+          envkey_NEXT_PUBLIC_REACT_BACK: ${{secrets.NEXT_PUBLIC_REACT_BACK}}
           directory: my-app
           file_name: .env.local
           fail_on_empty: true
