--- a/back-app/package.json
+++ b/back-app/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "@prisma/client": "^4.13.0",
+    "@sendgrid/mail": "^7.7.0",
     "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
