--- a/my-app/package.json
+++ b/my-app/package.json
@@ -21,6 +21,7 @@
     "eslint-config-next": "13.3.1",
     "framer-motion": "^10.12.8",
     "next": "13.3.1",
+    "popmotion": "^11.0.5",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-currency-input-field": "^3.6.10",
@@ -28,6 +29,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
     "react-loader-spinner": "^5.3.4",
+    "react-responsive-carousel": "^3.2.23",
     "react-text-mask": "^5.5.0",
     "react-toastify": "^9.1.2",
     "tailwindcss": "^3.3.2",
