--- a/back-app/.env
+++ b/back-app/.env
@@ -1,5 +1,5 @@
 DATABASE_URL=postgresql://postgres:postgres@postgres:5432/deploy?schema=public
-ADMIN_PASSWORD=2%0Yn32$C@8ugh0$*Rsdg1AgB23@
+ADMIN_PASSWORD=20Yn32C@8ugh0Rsdg1AgB23&
 JWT_SECRET=pidjasndi
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
