fix: complement, middle name and banner adjust

--- a/back-app/.env
+++ b/back-app/.env
@@ -1,4 +1,4 @@
-DATABASE_URL=postgresql://postgres:postgres@postgres:5432/deploy?schema=public
+DATABASE_URL=postgresql://postgres:postgres@localhost:5432/deploy?schema=public
 ADMIN_PASSWORD=20Yn32C@8ugh0Rsdg1AgB23&
 JWT_SECRET=pidjasndi
 POSTGRES_USER=postgres
