--- a/back-app/.env
+++ b/back-app/.env
@@ -1,4 +1,5 @@
-DATABASE_URL=postgresql://postgres:postgres@postgres:5432/deploy?schema=public
+#DATABASE_URL=postgresql://postgres:postgres@postgres:5432/deploy?schema=public
+DATABASE_URL=postgres://postgres:91122325@localhost:5432/caminhoes
 ADMIN_PASSWORD=20Yn32C@8ugh0Rsdg1AgB23&
 JWT_SECRET=pidjasndi
 POSTGRES_USER=postgres
