--- a/back-app/.env
+++ b/back-app/.env
@@ -1,7 +1,7 @@
-DATABASE_URL=postgresql://postgres:postgres@postgres:5432/deploy?schema=public
+DATABASE_URL=postgresql://postgres:postgres@postgres:5432/new?schema=public
 ADMIN_PASSWORD=20Yn32C@8ugh0Rsdg1AgB23&
 JWT_SECRET=pidjasndi
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
-POSTGRES_DB=deploy
+POSTGRES_DB=new
 SENDGRID_API_KEY=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
